--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,10 @@ services:
   scraibe:
     image: scraibe-xpu:latest
     container_name: scraibe_xpu
-    #    entrypoint: [ "tail", "-f", "/dev/null" ]
+    entrypoint: [ "/bin/bash" ]
+    command: [ "-l" ]  # Login shell for interactive use    
+
+#    entrypoint: [ "tail", "-f", "/dev/null" ]
     #    command: []  # prevent auto-launch of WebUI
     volumes:
         - /tmp:/data
@@ -19,3 +22,6 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    stdin_open: true      # <- needed for interactive mode
+    tty: true             # <- needed for interactive mode
+#    restart: no           # <- so it doesn’t restart on exit
