--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,23 @@
 services:
   scraibe:
-    image: scraibe-ipex:latest
+    image: scraibe-xpu:latest
     container_name: scraibe_xpu
-    #    entrypoint: [ "tail", "-f", "/dev/null" ]
-    #    command: []  # prevent auto-launch of WebUI
+    entrypoint: [ "/bin/bash" ]
+    command: [ "-l" ]  # Login shell for interactive use
     volumes:
-        - /tmp:/data
+      - /tmp:/data
     devices:
-        - /dev/dri:/dev/dri
+      - /dev/dri:/dev/dri
     environment:
-        - SCRAIBE_TORCH_DEVICE=xpu
-        - SYCL_DEVICE_FILTER=level_zero:gpu
-        - HF_TOKEN=${HF_TOKEN}
-        - IPEX_XPU_ONEDNN_LAYOUT=1
-        - LIBVA_DRIVER_NAME=iHD
-        - AUTOT_CACHE=/data/models/
-    restart: unless-stopped
+      - SCRAIBE_TORCH_DEVICE=xpu
+      - SYCL_DEVICE_FILTER=level_zero:gpu
+      - HF_TOKEN=${HF_TOKEN}
+      - IPEX_XPU_ONEDNN_LAYOUT=1
+      - LIBVA_DRIVER_NAME=iHD
+      - AUTOT_CACHE=/data/models/
+    env_file:
+      - .env
+    stdin_open: true      # <- needed for interactive mode
+    tty: true             # <- needed for interactive mode
+    restart: no           # <- so it doesn’t restart on exit
 
