--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 --extra-index-url https://download.pytorch.org/whl/xpu
 
 # Update above --extra-index-url according to your device.
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
 
 ## Nvidia GPU
 # CUDA 12.1 : https://download.pytorch.org/whl/cu121
@@ -20,12 +21,15 @@ pyannote.core~=5.0.0
 pyannote.database~=5.0.1
 pyannote.metrics~=3.2.1
 pyannote.pipeline~=3.0.1
+intel-extension-for-pytorch==2.7.10+xpu
+oneccl_bind_pt==2.7.0+xpu
 
-torch>=2.7.0
-torchaudio>=2.7.0
-torchvision==0.22.0+xpu
+torch==2.7.0
+torchaudio==2.7.0
+torchvision==0.22.0
 
 torchmetrics
 librosa
 insanely-fast-whisper
 intel-openmp
+transformers
