--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
+--extra-index-url https://download.pytorch.org/whl/xpu
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
 tqdm>=4.66.5
 numpy>=1.26.4
 
 openai-whisper==20231117
 faster-whisper~=1.0.3
 
-pyannote.audio~=3.3.1
-pyannote.core~=5.0.0
-pyannote.database~=5.0.1 
-pyannote.metrics~=3.2.1
-pyannote.pipeline~=3.0.1
-
-torchaudio>=2.1.2
+pyannote.audio>=3.1.0
+torch==2.7.0
+torchaudio==2.7.0
+intel-extension-for-pytorch==2.7.10+xpu
+oneccl_bind_pt==2.7.0+xpu
 
