--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,58 @@
+# This requirements.txt is generated based on the pyproject.toml targeting
+# a PyTorch 2.6.x XPU stack with ipex-llm[xpu_2.6].
+#
+# IMPORTANT:
+# It's highly recommended to install ipex-llm with its extras first in a clean environment,
+# as it will pull its specific, compatible versions of torch, intel-extension-for-pytorch, etc.,
+# from the specified Intel indexes.
+#
+# Example manual installation order for such an environment:
+# 1. pip install --pre --upgrade 'torch>=2.6.0,<2.7.0' --extra-index-url https://download.pytorch.org/whl/xpu (find exact XPU wheel for 2.6.x)
+# 2. pip install intel-extension-for-pytorch==2.6.10+xpu --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
+# 3. pip install --pre --upgrade 'ipex-llm[xpu_2.6]>=2.3.0rc1' --extra-index-url https://download.pytorch.org/whl/xpu
+# 4. pip install -r requirements.txt (for the remaining packages)
+#
+# The versions listed below for torch, ipex, transformers etc. are based on the
+# pyproject.toml and observed dependencies. The ipex-llm install will be the ultimate
+# source of truth for compatible versions of its direct dependencies.
+
 --extra-index-url https://download.pytorch.org/whl/xpu
 --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
+
+# Core application dependencies
 tqdm>=4.66.5
-numpy>=1.26.4
-
-openai-whisper==20231117
+numpy==1.26.4 # Pinned as ipex-llm 2.3.0rc1 used this
+openai-whisper>=20231117,<20240931
 faster-whisper~=1.0.3
-
 pyannote.audio>=3.1.0
-torch==2.7.0
-torchaudio==2.7.0
-intel-extension-for-pytorch==2.7.10+xpu
-oneccl_bind_pt==2.7.0+xpu
 
+# --- PyTorch Stack & IPEX-LLM (Targeting PT 2.6.x toolchain) ---
+# These versions should align with what ipex-llm[xpu_2.6] requires/installs.
+# Poetry would resolve these, but for a flat requirements.txt, you'd ensure
+# the ipex-llm install step (see above) correctly installs these.
+torch>=2.6.0,<2.7.0 # Exact XPU build string will be resolved by pip from the index
+torchaudio>=2.6.0,<2.7.0 # Match torch XPU version
+intel-extension-for-pytorch==2.6.10+xpu
+# oneccl_bind_pt==2.6.0+xpu # Uncomment if explicitly needed
+
+ipex-llm[xpu_2.6]>=2.3.0rc1 # This is the key package to install correctly
+
+# --- Dependencies likely pulled by ipex-llm[xpu_2.6] ---
+# (Based on previous observations for ipex-llm 2.3.0rc1)
+transformers==4.37.0
+tokenizers==0.15.2
+accelerate==0.23.0
+
+# Note: Other transitive dependencies of the above packages (like huggingface-hub, safetensors, etc.)
+# will also be installed by pip. This file lists the primary ones defined in pyproject.toml
+# or known to be pulled by ipex-llm.
+
+# --- To include dev dependencies (optional) ---
+# pytest>=8.1.1
+
+# --- To include docs dependencies (optional) ---
+# sphinx>=7.3.7
+# sphinx-rtd-theme>=2,<4
+# markdown-it-py[plugins]~=3.0.0
+# myst-parser>=3.0.1
+# mdit-py-plugins>=0.4.1
