--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ classifiers = [
     'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
     'Programming Language :: Python :: 3.9',
     'Programming Language :: Python :: 3.10',
-    'Programming Language :: Python :: 3.11', # Python 3.11 is used in the ipex-llm quickstart
-    'Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1', # Retained if you also support CUDA
+    'Programming Language :: Python :: 3.11',
+    'Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1',
     'Topic :: Scientific/Engineering :: Artificial Intelligence'
 ]
 packages = [{include = "scraibe"}]
@@ -30,43 +30,46 @@ exclude =[
 ]
 
 [tool.poetry.dependencies]
-python = "^3.11" # ipex-llm quickstart uses Python 3.11, consider aligning if possible
+python = "^3.9" # Or ^3.11 if you prefer
 
 # Core application dependencies
 tqdm = "^4.66.5"
-numpy = "^1.26.4" # ipex-llm 2.3.0rc1 used 1.26.4
-openai-whisper = ">=20231117,<20240931" # Ensure compatibility with transformers 4.37.0 if pinned
+numpy = "^1.26.4"
+openai-whisper = ">=20231117,<20240931"
 faster-whisper = "^1.0.3"
-"pyannote.audio" = ">=3.1.0" # Ensure compatibility with torch 2.6.x
+"pyannote.audio" = ">=3.1.0"
 
-# --- PyTorch Stack for IPEX-LLM [xpu_2.6] ---
-# Targeting PyTorch 2.6.x and IPEX 2.6.10+xpu as per Intel Dockerfile example for ipex-llm[xpu_2.6]
-# The exact PyTorch XPU wheel string (e.g., "==2.6.0+xpu" or similar with build hash)
-# needs to be confirmed from Intel's wheel indexes for compatibility with IPEX 2.6.10+xpu.
-# For now, using a general 2.6.x specifier; ipex-llm[xpu_2.6] install will guide this.
-torch = ">=2.6.0,<2.7.0" # General specifier, will be refined by ipex-llm[xpu_2.6] install
-torchaudio = ">=2.6.0,<2.7.0" # Match torch XPU version
-intel-extension-for-pytorch = "==2.6.10+xpu"
-# oneccl_bind_pt = "==2.6.0+xpu" # For distributed; add if explicitly needed by your setup or ipex-llm[xpu_2.6]
+# --- PyTorch 2.7 Stack for XPU (as per Intel documentation) ---
+torch = { version = "==2.7.0", source = "pytorch-xpu" }
+torchvision = { version = "==0.22.0", source = "pytorch-xpu" } # Align with PT 2.7.0 if used
+torchaudio = { version = "==2.7.0", source = "pytorch-xpu" }
+intel-extension-for-pytorch = { version = "==2.7.10+xpu", source = "intel" }
+oneccl_bind_pt = { version = "==2.7.0+xpu", source = "intel" }
 
 # --- IPEX-LLM ---
-# Using the [xpu_2.6] tag as per Intel's Linux Quickstart and Dockerfile.
-# This will pull its specific dependencies, including the correct torch and ipex if not pinned precisely above,
-# or it will verify against the pinned versions.
-ipex-llm = { version = ">=2.3.0rc1", extras = ["xpu_2.6"] } # Using rc1 as a recent pre-release
+# Now, we need an ipex-llm version compatible with PyTorch 2.7 / IPEX 2.7.
+# This might require a specific [xpu_2.7] tag or a recent ipex-llm version.
+# If a direct [xpu_2.7] isn't found, you might need to check ipex-llm release notes
+# or try a recent version and see if its dependencies are compatible or if it pulls compatible ones.
+# For now, let's specify a recent version and the generic [xpu] extra. Poetry will try to make it fit.
+# If this causes PyTorch/IPEX downgrades, then ipex-llm doesn't yet have a stable release for PT 2.7.
+ipex-llm = { version = ">=2.3.0rc1", extras = ["xpu"], optional = true } # Making it optional for now
 
-# --- Dependencies that ipex-llm (e.g., 2.3.0rc1 with [xpu_2.6]) might install/require ---
-# These versions will likely be enforced by ipex-llm[xpu_2.6].
-# Pinning them can help ensure consistency if ipex-llm's spec is loose.
-transformers = "==4.37.0" # This was pulled by a previous ipex-llm install attempt
-tokenizers = "==0.15.2"   # This was pulled by a previous ipex-llm install attempt
-accelerate = "==0.23.0"   # This was pulled by a previous ipex-llm install attempt
-# setuptools = "<70.0.0" # ipex-llm also pinned this, poetry handles setuptools differently
+# Pinning transformers, tokenizers, accelerate if ipex-llm requires specific older versions.
+# These were observed with an ipex-llm 2.3.0rc1 install attempt.
+# If ipex-llm works with newer ones, these can be relaxed.
+transformers = { version = "==4.37.0", optional = true }
+tokenizers = { version = "==0.15.2", optional = true }
+accelerate = { version = "==0.23.0", optional = true }
+
+[tool.poetry.extras]
+ipex_llm_feature = ["ipex-llm", "transformers", "tokenizers", "accelerate"] # Group ipex-llm related deps
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 
 [tool.poetry-dynamic-versioning]
+# ... (your existing dynamic versioning config) ...
 enable = true
 vcs = "git"
 strict = true
@@ -81,11 +84,13 @@ format-jinja = """
 """
 
 [tool.poetry.group.docs.dependencies]
+# ... (your existing docs dependencies) ...
 sphinx = "^7.3.7"
 sphinx-rtd-theme = ">=2,<4"
 markdown-it-py = {version = "~3.0.0", extras = ["plugins"]}
 myst-parser = "^3.0.1"
 mdit-py-plugins = "^0.4.1"
+
 
 [tool.poetry.scripts]
 scraibe = "scraibe.cli:cli"
@@ -93,12 +98,18 @@ scraibe = "scraibe.cli:cli"
 [[source]]
 name = "pytorch-xpu"
 url = "https://download.pytorch.org/whl/xpu"
-priority = "explicit"
+# priority = "explicit" # Using explicit source assignment per dependency instead
 
 [[source]]
 name = "intel"
 url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
-priority = "explicit"
+# priority = "explicit"
+
+# PyPI should be implicitly available or can be added if needed:
+# [[source]]
+# name = "PyPI"
+# priority = "default" # or "supplemental"
+
 
 [tool.ruff.lint.extend-per-file-ignores]
 "__init__.py" = ["E402","F403",'F401']
