--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,13 +44,13 @@ faster-whisper = "^1.0.3"
 # The exact PyTorch XPU version string (e.g., "==2.6.0")
 # needs to be available from the "pytorch-xpu" source.
 # Using explicit source assignment for these critical XPU packages.
-torch = { version = ">=2.6.0,<2.7.0", source = "pytorch-xpu" }
-torchaudio = { version = ">=2.6.0,<2.7.0", source = "pytorch-xpu" }
-intel-extension-for-pytorch = { version = "==2.6.10+xpu", source = "intel" }
+#torch = { version = ">=2.6.0,<2.7.0", source = "pytorch-xpu" }
+#torchaudio = { version = ">=2.6.0,<2.7.0", source = "pytorch-xpu" }
+#intel-extension-for-pytorch = { version = "==2.6.10+xpu", source = "intel" }
 # oneccl_bind_pt = { version = ">=2.6.0,<2.7.0", source = "intel" } # Add if needed
 
 # --- IPEX-LLM ---
-ipex-llm = { version = ">=2.3.0rc1", extras = ["xpu_2.6"] }
+#ipex-llm = { version = ">=2.3.0rc1", extras = ["xpu_2.6"] }
 
 # --- Dependencies potentially pinned by ipex-llm ---
 transformers = "==4.37.0"
@@ -85,15 +85,15 @@ mdit-py-plugins = "^0.4.1"
 scraibe = "scraibe.cli:cli"
 
 # Source definitions for Poetry
-[[tool.poetry.source]]
-name = "pytorch-xpu"
-url = "https://download.pytorch.org/whl/xpu/"
-priority = "explicit"
+#[[tool.poetry.source]]
+#name = "pytorch-xpu"
+#url = "https://download.pytorch.org/whl/xpu/"
+#priority = "explicit"
 
-[[tool.poetry.source]]
-name = "intel"
-url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
-priority = "explicit"
+#[[tool.poetry.source]]
+#name = "intel"
+#url = "https://pytorch-extension.intel.com/release-whl/stable/xpu/us/"
+#priority = "explicit"
 
 # PyPI is typically used by default by Poetry if a package isn't found in other defined sources.
 # You can add it explicitly if needed, e.g.:
